--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon"  href="./poki.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PokeLens-Vaada har ek ko</title>
+    <title>PokeLens-Gotta catch 'em all!</title>
   </head>
   <body>
     <div id="root"></div>
